--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "postcss": "8.4.24",
     "query-string": "^8.1.0",
     "react": "18.2.0",
+    "react-code-blocks": "^0.0.9-0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "tailwindcss": "3.3.2",
