Forced installed material ui

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "material-ui": "^0.20.2",
     "next": "13.4.7",
     "postcss": "8.4.24",
     "query-string": "^8.1.0",
